kubernetes/apps/networking/static-routes/app/syncthing/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app syncthing
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: http
      port: 8384
  externalName: helios.${INTERNAL_DOMAIN}
