kubernetes/apps/networking/static-routes/app/syncthing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app syncthing
  namespace: network-system
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "arcticons:syncthing"
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "internal-nginx"
  rules:
    - host: &host "syncthing.${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: http
  tls:
    - hosts:
        - *host
